@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003-2012 GraphicsMagick Group
+% Copyright (C) 2003-2015 GraphicsMagick Group
 % Copyright (C) 2002 ImageMagick Studio
 % Copyright 1991-1999 E. I. du Pont de Nemours and Company
 %
@@ -4085,6 +4085,7 @@ MagickExport void DrawPushGraphicContext(DrawContext context)
                   (context->index+1)*sizeof(DrawInfo *));
   if (context->graphic_context == (DrawInfo **) NULL)
     {
+      context->index--;
       ThrowDrawException3(ResourceLimitError,MemoryAllocationFailed,
         UnableToDrawOnImage)
     }
